<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/iphonesilver"
        android:id="@+id/main_imageiphone"
        android:contentDescription="@string/descripimageiphone"
        android:scaleType="centerCrop"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/radioButton"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/datePicker"
        android:layout_marginBottom="40dp"
        app:layout_constraintHorizontal_bias="0.02" />

    <RadioButton
        android:text="@string/galan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
        android:layout_marginBottom="8dp" />

    <RadioButton
        android:text="@string/galan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton2"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/main_imageiphone"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/datePicker"
        android:layout_marginBottom="64dp"
        app:layout_constraintHorizontal_bias="0.7" />

    <DatePicker
        android:layout_width="249dp"
        android:layout_height="87dp"
        android:id="@+id/datePicker"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:text="@string/irARegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:visibility="visible"
        android:textSize="12sp"
        android:onClick="nextActivity"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_imageiphone" />

    <TextView
        android:text="@string/fechanaci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:alpha="1"
        app:layout_constraintRight_toLeftOf="@+id/datePicker"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/main_imageiphone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:text="@string/bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/main_imageiphone"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="@string/regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="toLanding"
        android:visibility="visible"
        tools:layout_editor_absoluteY="131dp"
        tools:layout_editor_absoluteX="336dp" />

</android.support.constraint.ConstraintLayout>